tests/duarouter/alternatives/style2_input/errors/route/route_cost_negative/errors.duarouter
Error: Invalid cost for route '!1'.
Quitting (on error).
